--- a/app/src/main/res/layout/history_fragment.xml
+++ b/app/src/main/res/layout/history_fragment.xml
@@ -8,5 +8,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="History" />
+        android:text="History"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:padding="22dp"/>
 </FrameLayout>
