--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,13 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".main.MainFragment">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:id="@+id/label"
+        android:text="Quiz"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:padding="22dp"
+        android:fontFamily="sans-serif-condensed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/illustration"
+        android:layout_width="90dp"
+        android:layout_height="100dp"
+        android:src="@drawable/tut1"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/label"/>
+
+    <TextView
+        android:layout_marginTop="12dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/illustration"
+        android:id="@+id/seekbarLabel"
+        android:text="Questions amount: 10"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"/>
+
+    <SeekBar
+        android:id="@+id/seekbar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:layout_below="@+id/seekbarLabel"
+        android:layout_width="250dp"
+        android:layout_height="30dp"/>
+<!--        android:thumbTint="@color/colorBottomNavItems"-->
+<!--        android:progressTint="@color/colorBottomNavItems"/>-->
+
+    <TextView
+        android:layout_marginTop="12dp"
+        android:text="Category"
+        android:layout_below="@+id/seekbar"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/categoryLabel"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"/>
+
+    <org.angmarch.views.NiceSpinner
+        android:id="@+id/categorySpinner"
+        android:layout_marginTop="12dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/categoryLabel"
+        android:layout_centerHorizontal="true"
+        app:entries="@array/category_list"/>
+
+    <TextView
+        android:id="@+id/difficultyLabel"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="Difficulty"
+        android:layout_below="@id/categorySpinner"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"/>
+
+    <org.angmarch.views.NiceSpinner
+        android:id="@+id/difficultySpinner"
+        android:layout_marginTop="12dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/difficultyLabel"
+        android:layout_centerHorizontal="true"
+        app:entries="@array/difficulty_list"/>
+
+
+    <Button
+        android:id="@+id/btnStart"
+        android:layout_width="250dp"
+        android:layout_height="48dp"
+        android:text="START"
+        android:textColor="#fff"
+        android:textStyle="bold"
+        android:background="@color/colorBlue"
+        android:fontFamily="sans-serif-medium"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/difficultySpinner"
+        android:layout_marginTop="34dp"/>
+
+</RelativeLayout>
+
