--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -8,6 +8,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Settings" />
+        android:text="Settings"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:padding="22dp"/>
 
 </FrameLayout>
