--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,91 +8,116 @@
     tools:context=".main.MainFragment">
 
     <TextView
-        android:id="@+id/label"
-        android:text="Quiz"
-        android:textStyle="bold"
-        android:textSize="24sp"
-        android:padding="22dp"
-        android:fontFamily="sans-serif-condensed"
+        android:id="@+id/mTextView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="Quiz"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="24sp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="32dp"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <ImageView
-        android:id="@+id/illustration"
-        android:layout_width="90dp"
-        android:layout_height="100dp"
+        android:id="@+id/qImageView"
+        android:layout_width="50dp"
+        android:layout_height="75dp"
         android:src="@drawable/tut1"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/label"/>
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/mTextView"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
-        android:layout_marginTop="12dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/illustration"
-        android:id="@+id/seekbarLabel"
-        android:text="Questions amount: 10"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"/>
+        android:id="@+id/questionAmount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Questions amount:"
+        android:textColor="#A9A9A9"
+        android:textSize="12sp"
+        app:layout_constraintTop_toBottomOf="@id/qImageView"
+        app:layout_constraintLeft_toRightOf="@id/mTextView"
+        android:layout_marginTop="40dp"/>
+    <TextView
+        android:id="@+id/questionAmount10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10"
+        android:textColor="#3F3356"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toRightOf="@id/questionAmount"
+        app:layout_constraintTop_toBottomOf="@id/qImageView"
+        android:layout_marginTop="40dp"/>
 
     <SeekBar
         android:id="@+id/seekbar"
-        android:layout_centerHorizontal="true"
+        android:layout_width="240dp"
+        android:layout_height="15dp"
         android:layout_marginTop="12dp"
-        android:layout_below="@+id/seekbarLabel"
-        android:layout_width="250dp"
-        android:layout_height="30dp"/>
-<!--        android:thumbTint="@color/colorBottomNavItems"-->
-<!--        android:progressTint="@color/colorBottomNavItems"/>-->
+        android:min="5"
+        android:max="50"
+        android:progress="50"
+        app:layout_constraintLeft_toLeftOf="@id/questionAmount"
+        app:layout_constraintTop_toBottomOf="@id/questionAmount"/>
 
     <TextView
-        android:layout_marginTop="12dp"
-        android:text="Category"
-        android:layout_below="@+id/seekbar"
-        android:layout_centerHorizontal="true"
         android:id="@+id/categoryLabel"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"/>
+        android:text="Category"
+        android:textSize="12sp"
+        android:textColor="#A9A9A9"
+        android:layout_width="81dp"
+        android:layout_height="16dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintLeft_toLeftOf="@id/seekbar"
+        app:layout_constraintTop_toBottomOf="@id/seekbar"/>
 
     <org.angmarch.views.NiceSpinner
         android:id="@+id/categorySpinner"
         android:layout_marginTop="12dp"
-        android:layout_width="250dp"
+        app:entries="@array/category_list"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/categoryLabel"
-        android:layout_centerHorizontal="true"
-        app:entries="@array/category_list"/>
+        app:layout_goneMarginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/categoryLabel"
+        app:layout_constraintLeft_toLeftOf="@id/categoryLabel" />
 
     <TextView
         android:id="@+id/difficultyLabel"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
+        android:layout_width="81dp"
+        android:layout_height="16dp"
         android:text="Difficulty"
-        android:layout_below="@id/categorySpinner"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"/>
+        android:textSize="12sp"
+        android:textColor="#A9A9A9"
+        android:layout_marginTop="9dp"
+        app:layout_constraintTop_toBottomOf="@id/categorySpinner"
+        app:layout_constraintLeft_toLeftOf="@id/categorySpinner"/>
 
     <org.angmarch.views.NiceSpinner
         android:id="@+id/difficultySpinner"
-        android:layout_marginTop="12dp"
-        android:layout_width="250dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/difficultyLabel"
-        android:layout_centerHorizontal="true"
-        app:entries="@array/difficulty_list"/>
-
+        app:entries="@array/difficulty_list"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/difficultyLabel"
+        app:layout_constraintLeft_toLeftOf="@id/difficultyLabel"/>
 
     <Button
         android:id="@+id/btnStart"
-        android:layout_width="250dp"
+        android:layout_width="200dp"
         android:layout_height="48dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/bg_button"
+        android:gravity="center"
         android:text="START"
         android:textColor="#fff"
         android:textStyle="bold"
-        android:background="@color/colorBlue"
-        android:fontFamily="sans-serif-medium"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/difficultySpinner"
-        android:layout_marginTop="34dp"/>
+        app:layout_constraintEnd_toEndOf="@+id/difficultySpinner"
+        app:layout_constraintLeft_toLeftOf="@id/difficultySpinner"
+        app:layout_constraintTop_toBottomOf="@id/difficultySpinner" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
