--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu"
-        android:icon="@drawable/menu"
+        android:icon="@drawable/menu1"
         android:title="Menu"/>
 
     <item android:id="@+id/history"
-        android:icon="@drawable/history"
+        android:icon="@drawable/history2"
         android:title="History"/>
 
     <item android:id="@+id/settings"
-        android:icon="@drawable/settings"
+        android:icon="@drawable/profile"
         android:title="Settings"/>
 </menu>
