--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".result.ResultActivity">
+    tools:context=".presentation.result.ResultActivity">
 
     <TextView
         android:id="@+id/rTextView"
@@ -38,6 +38,35 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rImageView">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/rConstraintLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/r_catTexView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Category: Mixed"
+                android:textColor="#1F2041"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:layout_marginTop="22dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"/>
+
+            <TextView
+                android:id="@+id/r_difTextview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Difficulty"
+                app:layout_constraintTop_toBottomOf="@id/r_catTexView"/>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.cardview.widget.CardView>
