--- a/app/src/main/res/layout/history_fragment.xml
+++ b/app/src/main/res/layout/history_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".history.HistoryFragment">
+    tools:context=".presentation.history.HistoryFragment">
 
     <TextView
         android:id="@+id/hTextview"
@@ -26,11 +26,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:listitem="@layout/item_history"
-        tools:itemCount="10"
+        tools:itemCount="5"
         app:layout_constraintTop_toBottomOf="@id/hTextview"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginLeft="@dimen/page_history_margin"
-        android:layout_marginRight="@dimen/page_history_margin"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/hTextview">
     </androidx.recyclerview.widget.RecyclerView>
