--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -3,47 +3,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:padding="16dp"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="340dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="26dp"
-        android:layout_marginRight="26dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="19dp"
+        android:layout_marginRight="19dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/consContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="16dp">
+            android:paddingLeft="10dp">
 
             <TextView
                 android:id="@+id/catTxtView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="12dp"
                 android:layout_marginTop="8dp"
                 android:text="Category: Mixed"
                 android:textColor="#1F2041"
-                android:textSize="24sp"
+                android:textSize="17sp"
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="@id/consContainer"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintStart_toStartOf="@id/consContainer"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
             <TextView
                 android:id="@+id/corTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="13dp"
+                android:layout_marginTop="9dp"
                 android:text="Correct answers: 8/10"
                 android:textColor="#801F2041"
                 android:textSize="12sp"
@@ -55,11 +58,12 @@
                 android:id="@+id/difTexView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="13dp"
-                android:layout_marginBottom="15dp"
+                android:layout_marginTop="9dp"
                 android:text="Difficulty: Easy"
                 android:textColor="#801F2041"
                 android:textSize="12sp"
+                android:layout_marginBottom="15dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="@id/corTextView"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/corTextView" />
@@ -71,7 +75,7 @@
                 android:src="@drawable/ic_more_horiz_black_24dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginRight="30dp"/>
+                android:layout_marginRight="15dp"/>
 
             <TextView
                 android:id="@+id/hDateTextView"
@@ -79,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:text="12 may 2019 20:32"
-                android:layout_marginRight="30dp"
+                android:layout_marginRight="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent" />
 
