--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".main.MainFragment">
+    tools:context=".presentation.main.MainFragment">
 
     <TextView
         android:id="@+id/mTextView"
@@ -56,7 +56,6 @@
         android:layout_width="240dp"
         android:layout_height="15dp"
         android:layout_marginTop="12dp"
-        android:min="5"
         android:max="50"
         android:progress="50"
         app:layout_constraintLeft_toLeftOf="@id/questionAmount"
