--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -1,16 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".settings.SettingsFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Settings"
-        android:textStyle="bold"
-        android:textSize="24sp"
-        android:padding="22dp"/>
+        style="@style/TitleText"
+        android:id="@+id/settings_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="Settings"/>
 
-</FrameLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/dark_purple"
+        app:layout_constraintTop_toTopOf="@+id/settings_share_this_app"/>
+
+    <TextView
+        android:id="@+id/settings_share_this_app"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/settings_title"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:padding="20dp"
+        android:text="Share this app"
+        android:background="?selectableItemBackground"
+        android:textColor="@color/dark_purple"
+        android:clickable="true"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/settings_share_this_app"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/settings_share_this_app"
+        android:layout_margin="@dimen/right_left_margin"
+        android:src="@drawable/vektor_stroke"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/dark_purple"
+        app:layout_constraintBottom_toBottomOf="@+id/settings_rate_us_app"/>
+
+    <TextView
+        android:id="@+id/settings_rate_us_app"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/settings_share_this_app"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:padding="20dp"
+        android:text="Rate us"
+        android:background="?selectableItemBackground"
+        android:textColor="@color/dark_purple"
+        android:clickable="true"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/settings_rate_us_app"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/settings_rate_us_app"
+        android:src="@drawable/vektor_stroke"
+        android:layout_margin="@dimen/right_left_margin" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/dark_purple"
+        app:layout_constraintBottom_toBottomOf="@+id/leaveFeedback_rate_us_app"/>
+
+    <TextView
+        android:id="@+id/leaveFeedback_rate_us_app"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/settings_rate_us_app"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:padding="20dp"
+        android:text="Leave feedback"
+        android:background="?selectableItemBackground"
+        android:textColor="@color/dark_purple"
+        android:clickable="true"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/leaveFeedback_rate_us_app"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/leaveFeedback_rate_us_app"
+        android:src="@drawable/vektor_stroke"
+        android:layout_margin="@dimen/right_left_margin" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/dark_purple"
+        app:layout_constraintBottom_toBottomOf="@+id/settings_share_this_app"/>
+
+    <TextView
+        android:id="@+id/clear_history_rate_us_app"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/leaveFeedback_rate_us_app"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:padding="20dp"
+        android:text="Clear history"
+        android:background="?selectableItemBackground"
+        android:textColor="@color/dark_purple"
+        android:clickable="true"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/clear_history_rate_us_app"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/clear_history_rate_us_app"
+        android:src="@drawable/vektor_stroke"
+        android:layout_margin="@dimen/right_left_margin" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/dark_purple"
+        app:layout_constraintBottom_toBottomOf="@+id/clear_history_rate_us_app"/>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
