--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,15 @@
     <dimen name="page_main_margin">64dp</dimen>
     <dimen name="page_history_margin">18dp</dimen>
 
+    <dimen name="right_left_margin">12dp</dimen>
+    <dimen name="small_margin">4dp</dimen>
+    <dimen name="default_margin">8dp</dimen>
+    <dimen name="content_margin">20dp</dimen>
+    <dimen name="big_margin">32dp</dimen>
+    <dimen name="qseek_bar_margin">100dp</dimen>
+
+    <dimen name="title_text_size">24sp</dimen>
+    <dimen name="subtitle_text_size">18sp</dimen>
+    <dimen name="default_text_size">16sp</dimen>
+
 </resources>
