--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,28 +1,57 @@
-<resources>
+<!--<resources xmlns:tools="http://schemas.android.com/tools">-->
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="color">@color/colorFill</item>
-    </style>
-
-<!--    <style name="AppTheme.NoActionBar">-->
-<!--        <item name="windowActionBar">false</item>-->
-<!--        <item name="windowNoTitle">true</item>-->
-<!--    </style>-->
-
-<!--    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">-->
+<!--    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
+<!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
 <!--        <item name="colorPrimary">@color/colorPrimary</item>-->
 <!--        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
 <!--        <item name="colorAccent">@color/colorAccent</item>-->
+<!--        <item name="color">@color/colorFill</item>-->
 <!--    </style>-->
 
-<!--    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"></style>-->
+    <resources xmlns:tools="http://schemas.android.com/tools">
 
-<!--    <style name="ToolBarWithNavigationBack"></style>-->
+        <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+            <item name="colorPrimary">@color/colorPrimary</item>
+            <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+            <item name="colorAccent">@color/colorAccent</item>
+            <item name="android:windowBackground">@color/white</item>
+            <item name="windowActionBar">false</item>
+            <item name="windowNoTitle">true</item>
+            <item name="android:statusBarColor" tools:targetApi="m">#FFF</item>
+            <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        </style>
 
+        <style name="TitleText" parent="AppTheme.BoldText">
+            <item name="android:textSize">@dimen/title_text_size</item>
+            <item name="android:textColor">@color/dark_purple</item>
+            <item name="android:padding">24dp</item>
+        </style>
 
-</resources>
+        <style name="SubtitleText" parent="AppTheme.BoldText">
+            <item name="android:textSize">@dimen/subtitle_text_size</item>
+            <item name="android:textColor">@color/dark_purple</item>
+        </style>
+
+        <style name="GreyAccent">
+            <item name="colorAccent">@color/light_grey</item>
+            <item name="colorPrimary">@color/light_grey</item>
+        </style>
+
+        <style name="AppTheme.BoldText">
+            <item name="android:fontFamily" tools:ignore="NewApi">sans-serif-black</item>
+        </style>
+
+        <style name="AppTheme.RegularText">
+            <item name="android:fontFamily" tools:ignore="NewApi">sans-serif</item>
+        </style>
+
+        <style name="AppTheme.SemiboldText">
+            <item name="android:fontFamily" tools:ignore="NewApi">sans-serif-medium</item>
+        </style>
+
+        <style name="AppTheme.LightText">
+            <item name="android:fontFamily" tools:ignore="NewApi">sans-serif-light</item>
+        </style>
+
+    </resources>
