--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -24,7 +24,8 @@
             android:id="@+id/consContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="10dp">
+            android:paddingLeft="10dp"
+            android:elevation="8dp">
 
             <TextView
                 android:id="@+id/catTxtView"
@@ -86,10 +87,6 @@
                 android:layout_marginRight="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent" />
-
-
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
