--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -9,23 +9,19 @@
 
     <TextView
         android:id="@+id/mTextView"
+        style="@style/TitleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Quiz"
         app:layout_constraintTop_toTopOf="parent"
-        android:textSize="24sp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="32dp"
-        android:textColor="#000000"
-        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <ImageView
         android:id="@+id/qImageView"
-        android:layout_width="50dp"
-        android:layout_height="75dp"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp"
         android:src="@drawable/tut1"
-        android:layout_marginTop="30dp"
+        android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/mTextView"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
@@ -35,72 +31,93 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Questions amount:"
-        android:textColor="#A9A9A9"
-        android:textSize="12sp"
+        android:textColor="@color/light_grey"
+        android:textSize="13sp"
+        android:fontFamily="sans-serif"
         app:layout_constraintTop_toBottomOf="@id/qImageView"
-        app:layout_constraintLeft_toRightOf="@id/mTextView"
-        android:layout_marginTop="40dp"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="64dp" />
+
     <TextView
         android:id="@+id/questionAmount10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="10"
-        android:textColor="#3F3356"
-        android:layout_marginLeft="8dp"
+        android:textSize="15sp"
+        android:textColor="@color/dark_purple"
+        android:fontFamily="sans-serif"
+        app:layout_constraintTop_toTopOf="@id/questionAmount"
+        app:layout_constraintBottom_toBottomOf="@id/questionAmount"
         app:layout_constraintLeft_toRightOf="@id/questionAmount"
-        app:layout_constraintTop_toBottomOf="@id/qImageView"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp" />
 
     <SeekBar
-        android:id="@+id/seekbar"
-        android:layout_width="240dp"
-        android:layout_height="15dp"
-        android:layout_marginTop="12dp"
+        android:id="@+id/seek_bar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:max="50"
-        android:progress="50"
-        app:layout_constraintLeft_toLeftOf="@id/questionAmount"
-        app:layout_constraintTop_toBottomOf="@id/questionAmount"/>
+        android:progress="10"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/questionAmount"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
         android:id="@+id/categoryLabel"
-        android:text="Category"
-        android:textSize="12sp"
-        android:textColor="#A9A9A9"
-        android:layout_width="81dp"
-        android:layout_height="16dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintLeft_toLeftOf="@id/seekbar"
-        app:layout_constraintTop_toBottomOf="@id/seekbar"/>
+        android:text="Category:"
+        android:textSize="13sp"
+        android:textColor="@color/light_grey"
+        android:fontFamily="sans-serif"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginEnd="64dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/seek_bar"/>
 
     <org.angmarch.views.NiceSpinner
         android:id="@+id/categorySpinner"
-        android:layout_marginTop="12dp"
         app:entries="@array/category_list"
-        android:layout_width="240dp"
+        app:popupTextAlignment="start"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_goneMarginTop="5dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/categoryLabel"
-        app:layout_constraintLeft_toLeftOf="@id/categoryLabel" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="64dp"
+        android:layout_marginLeft="64dp"/>
 
     <TextView
         android:id="@+id/difficultyLabel"
-        android:layout_width="81dp"
-        android:layout_height="16dp"
-        android:text="Difficulty"
-        android:textSize="12sp"
-        android:textColor="#A9A9A9"
-        android:layout_marginTop="9dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Difficulty:"
+        android:textSize="13sp"
+        android:fontFamily="sans-serif"
+        android:textColor="@color/light_grey"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="64dp"
         app:layout_constraintTop_toBottomOf="@id/categorySpinner"
-        app:layout_constraintLeft_toLeftOf="@id/categorySpinner"/>
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <org.angmarch.views.NiceSpinner
         android:id="@+id/difficultySpinner"
-        android:layout_width="240dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:entries="@array/difficulty_list"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="64dp"
+        android:layout_marginLeft="64dp"
         app:layout_constraintTop_toBottomOf="@id/difficultyLabel"
-        app:layout_constraintLeft_toLeftOf="@id/difficultyLabel"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <Button
         android:id="@+id/btnStart"
@@ -112,7 +129,7 @@
         android:background="@drawable/bg_button"
         android:gravity="center"
         android:text="START"
-        android:textColor="#fff"
+        android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/difficultySpinner"
         app:layout_constraintLeft_toLeftOf="@id/difficultySpinner"
