--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -112,7 +112,7 @@
         android:padding="20dp"
         android:text="Clear history"
         android:background="?selectableItemBackground"
-        android:textColor="@color/dark_purple"
+        android:textColor="@color/purple"
         android:clickable="true"
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp" />
