--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -6,8 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        style="@style/TitleText"
         android:id="@+id/settings_title"
+        style="@style/TitleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -18,27 +18,22 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/dark_purple"
-        app:layout_constraintTop_toTopOf="@+id/settings_share_this_app"/>
+        app:layout_constraintTop_toTopOf="@+id/share_this_app"/>
 
     <TextView
-        android:id="@+id/settings_share_this_app"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/share_this_app"
         app:layout_constraintTop_toBottomOf="@+id/settings_title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:padding="20dp"
-        android:text="Share this app"
-        android:background="?selectableItemBackground"
-        android:textColor="@color/dark_purple"
-        android:clickable="true"/>
+        android:text="@string/share_this_app"
+        style="@style/st_share_this_app" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/settings_share_this_app"
+        app:layout_constraintTop_toTopOf="@+id/share_this_app"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/settings_share_this_app"
+        app:layout_constraintBottom_toBottomOf="@+id/share_this_app"
         android:layout_margin="@dimen/right_left_margin"
         android:src="@drawable/vektor_stroke"/>
 
@@ -46,90 +41,73 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/dark_purple"
-        app:layout_constraintBottom_toBottomOf="@+id/settings_rate_us_app"/>
+        app:layout_constraintBottom_toBottomOf="@+id/rate_us_app"/>
 
     <TextView
-        android:id="@+id/settings_rate_us_app"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/settings_share_this_app"
+        android:id="@+id/rate_us_app"
+        app:layout_constraintTop_toBottomOf="@+id/share_this_app"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:padding="20dp"
-        android:text="Rate us"
-        android:background="?selectableItemBackground"
-        android:textColor="@color/dark_purple"
-        android:clickable="true"/>
+        android:text="@string/rate_us"
+        style="@style/st_rate_us_app" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/settings_rate_us_app"
+        app:layout_constraintTop_toTopOf="@+id/rate_us_app"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/settings_rate_us_app"
+        app:layout_constraintBottom_toBottomOf="@+id/rate_us_app"
         android:src="@drawable/vektor_stroke"
         android:layout_margin="@dimen/right_left_margin" />
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/dark_purple"
-        app:layout_constraintBottom_toBottomOf="@+id/leaveFeedback_rate_us_app"/>
+        app:layout_constraintBottom_toBottomOf="@+id/leaveFeedback"/>
 
     <TextView
-        android:id="@+id/leaveFeedback_rate_us_app"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/settings_rate_us_app"
+        android:id="@+id/leaveFeedback"
+        app:layout_constraintTop_toBottomOf="@+id/rate_us_app"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:padding="20dp"
-        android:text="Leave feedback"
-        android:background="?selectableItemBackground"
-        android:textColor="@color/dark_purple"
-        android:clickable="true"/>
+        android:text="@string/leave_feedback"
+        style="@style/st_leaveFeedback" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/leaveFeedback_rate_us_app"
+        app:layout_constraintTop_toTopOf="@+id/leaveFeedback"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/leaveFeedback_rate_us_app"
+        app:layout_constraintBottom_toBottomOf="@+id/leaveFeedback"
         android:src="@drawable/vektor_stroke"
         android:layout_margin="@dimen/right_left_margin" />
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/dark_purple"
-        app:layout_constraintBottom_toBottomOf="@+id/settings_share_this_app"/>
+        app:layout_constraintBottom_toBottomOf="@+id/share_this_app"/>
 
     <TextView
-        android:id="@+id/clear_history_rate_us_app"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/leaveFeedback_rate_us_app"
+        android:id="@+id/clear_history"
+        app:layout_constraintTop_toBottomOf="@+id/leaveFeedback"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:padding="20dp"
-        android:text="Clear history"
-        android:background="?selectableItemBackground"
-        android:textColor="@color/purple"
-        android:clickable="true"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp" />
+        android:text="@string/clear_history"
+        style="@style/st_clear_history" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/clear_history_rate_us_app"
+        app:layout_constraintTop_toTopOf="@+id/clear_history"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/clear_history_rate_us_app"
+        app:layout_constraintBottom_toBottomOf="@+id/clear_history"
         android:src="@drawable/vektor_stroke"
         android:layout_margin="@dimen/right_left_margin" />
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/dark_purple"
-        app:layout_constraintBottom_toBottomOf="@+id/clear_history_rate_us_app"/>
+        app:layout_constraintBottom_toBottomOf="@+id/clear_history"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
