--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@id/rTextView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
-    
+
     <androidx.cardview.widget.CardView
         android:id="@+id/rCardView"
         android:layout_width="342dp"
@@ -42,8 +42,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/rConstraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="62dp">
 
             <TextView
                 android:id="@+id/r_catTexView"
@@ -63,21 +63,42 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Difficulty"
-                android:layout_marginTop="39dp"
+                android:layout_marginTop="@dimen/margin_result_card_view_left_right"
                 app:layout_constraintTop_toBottomOf="@id/r_catTexView"
                 app:layout_constraintRight_toLeftOf="@id/r_catTexView"/>
 
             <TextView
-                android:id="@+id/all_text"
+                android:id="@+id/result_all_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="All"
-                app:layout_constraintBottom_toBottomOf="@id/r_difTextview"
-                app:layout_constraintBottom_toTopOf="@id/r_difTextview"
+                android:textStyle="bold"
+                android:textColor="@color/black"
                 app:layout_constraintTop_toBottomOf="@id/r_difTextview"
-                app:layout_constraintVertical_bias="0.0"
-                tools:layout_editor_absoluteX="51dp"
-                tools:ignore="MissingConstraints" />
+                app:layout_constraintLeft_toLeftOf="@id/r_difTextview"
+                app:layout_constraintRight_toRightOf="@id/r_difTextview"/>
+
+            <TextView
+                android:id="@+id/r_category_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Correct answers:"
+                android:layout_marginTop="@dimen/margin_result_card_view_left_right"
+                app:layout_constraintLeft_toRightOf="@+id/r_difTextview"
+                app:layout_constraintRight_toRightOf="@id/r_catTexView"
+                app:layout_constraintTop_toBottomOf="@+id/r_catTexView"/>
+
+            <TextView
+                android:id="@+id/r_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="8/10"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                app:layout_constraintTop_toBottomOf="@+id/r_category_textView"
+                app:layout_constraintRight_toRightOf="@id/r_category_textView"
+                app:layout_constraintLeft_toLeftOf="@id/r_category_textView"/>
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
