--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -12,128 +12,78 @@
         style="@style/TitleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Quiz"
+        android:text="@string/quiz"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <ImageView
         android:id="@+id/qImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="120dp"
         android:src="@drawable/tut1"
-        android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/mTextView"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        style="@style/m_qImageView" />
 
     <TextView
         android:id="@+id/questionAmount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Questions amount:"
-        android:textColor="@color/light_grey"
-        android:textSize="13sp"
-        android:fontFamily="sans-serif"
+        android:text="@string/questions_amount"
         app:layout_constraintTop_toBottomOf="@id/qImageView"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="64dp" />
+        style="@style/m_question_txt" />
 
     <TextView
         android:id="@+id/questionAmount10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="10"
-        android:textSize="15sp"
-        android:textColor="@color/dark_purple"
-        android:fontFamily="sans-serif"
+        android:text="@string/_10"
         app:layout_constraintTop_toTopOf="@id/questionAmount"
         app:layout_constraintBottom_toBottomOf="@id/questionAmount"
         app:layout_constraintLeft_toRightOf="@id/questionAmount"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp" />
+        style="@style/m_questionAmount10_txt" />
 
     <SeekBar
         android:id="@+id/seek_bar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:max="50"
-        android:progress="10"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/questionAmount"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        style="@style/m_seek_bar" />
 
     <TextView
         android:id="@+id/categoryLabel"
-        android:text="Category:"
-        android:textSize="13sp"
-        android:textColor="@color/light_grey"
-        android:fontFamily="sans-serif"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginEnd="64dp"
+        android:text="@string/category"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/seek_bar"/>
+        app:layout_constraintTop_toBottomOf="@id/seek_bar"
+        style="@style/m_categoryLabel" />
 
     <org.angmarch.views.NiceSpinner
         android:id="@+id/categorySpinner"
         app:entries="@array/category_list"
         app:popupTextAlignment="start"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/categoryLabel"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="64dp"
-        android:layout_marginLeft="64dp"/>
+        style="@style/m_categorySpinner" />
 
     <TextView
         android:id="@+id/difficultyLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Difficulty:"
-        android:textSize="13sp"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/light_grey"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="64dp"
+        android:text="@string/difficulty"
         app:layout_constraintTop_toBottomOf="@id/categorySpinner"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        style="@style/m_difficultyLabel_txt" />
 
     <org.angmarch.views.NiceSpinner
         android:id="@+id/difficultySpinner"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         app:entries="@array/difficulty_list"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="64dp"
-        android:layout_marginLeft="64dp"
         app:layout_constraintTop_toBottomOf="@id/difficultyLabel"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        style="@style/m_categorySpinner" />
 
     <Button
         android:id="@+id/btnStart"
-        android:layout_width="200dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/bg_button"
-        android:gravity="center"
-        android:text="START"
-        android:textColor="@color/white"
-        android:textStyle="bold"
+        android:text="@string/start"
         app:layout_constraintEnd_toEndOf="@+id/difficultySpinner"
         app:layout_constraintLeft_toLeftOf="@id/difficultySpinner"
-        app:layout_constraintTop_toBottomOf="@id/difficultySpinner" />
+        app:layout_constraintTop_toBottomOf="@id/difficultySpinner"
+        style="@style/btn_main_style" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
