--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="24sp"
         android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
         android:layout_marginTop="32dp"
         android:textColor="#000000"
         android:textStyle="bold"
