--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="light_grey">#A9A9A9</color>
     <color name="blue">#6979F8</color>
     <color name="green">#64DD17</color>
+    <color name="green1">#4CE2A7</color>
+
     <color name="red">#FF6581</color>
 
     <color name="colorPurple">#EE0FE6</color>
