--- a/app/src/main/res/drawable/bg_answer_quiz.xml
+++ b/app/src/main/res/drawable/bg_answer_quiz.xml
@@ -4,7 +4,7 @@
     <stroke android:color="@color/colorBlue"
         android:width="3dp"/>
 
-    <solid android:color="@color/colorBlue"/>
+    <solid android:color="@color/white"/>
     <corners android:radius="10sp"/>
 
 </shape>
