--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -7,20 +7,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.main.MainFragment">
 
-    <TextView
-        android:id="@+id/mTextView"
+    <ImageView
+        android:id="@+id/image_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Gegraphy"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textSize="24sp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_chevron_left_black_24dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:padding="10dp"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/mTextView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
         android:layout_marginTop="32dp"
+        android:layout_marginRight="32dp"
+        android:text="Gegraphy"
         android:textColor="#000000"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/q_ProgressBar"
@@ -28,13 +39,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:max="100"
-        android:progress="20"
+        android:progress="10"
         android:indeterminate="false"
         android:layout_marginLeft="70dp"
         android:layout_marginRight="70dp"
-        app:layout_constraintTop_toBottomOf="@id/mTextView"
-        app:layout_constraintEnd_toEndOf="@id/mTextView"/>
+        app:layout_constraintTop_toBottomOf="@id/mTextView1"
+        app:layout_constraintEnd_toEndOf="@id/mTextView1"/>
 
     <TextView
         android:id="@+id/count_quiz"
@@ -52,7 +62,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:listitem="@layout/item_quiz"
-        tools:itemCount="5"
         app:layout_constraintTop_toBottomOf="@+id/count_quiz"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/quiz_skip"
