--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -49,65 +49,107 @@
                 android:id="@+id/r_catTexView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:text="Category: Mixed"
                 android:textColor="#1F2041"
                 android:textSize="17sp"
                 android:textStyle="bold"
-                android:layout_marginTop="22dp"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/r_difTextview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Difficulty"
                 android:layout_marginTop="@dimen/margin_result_card_view_left_right"
-                app:layout_constraintTop_toBottomOf="@id/r_catTexView"
-                app:layout_constraintRight_toLeftOf="@id/r_catTexView"/>
+                android:text="Difficulty"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/r_category_textView"
+                app:layout_constraintTop_toBottomOf="@id/r_catTexView" />
 
             <TextView
                 android:id="@+id/result_all_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="All"
-                android:textStyle="bold"
                 android:textColor="@color/black"
-                app:layout_constraintTop_toBottomOf="@id/r_difTextview"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="@id/r_difTextview"
-                app:layout_constraintRight_toRightOf="@id/r_difTextview"/>
+                app:layout_constraintRight_toRightOf="@id/r_difTextview"
+                app:layout_constraintTop_toBottomOf="@id/r_difTextview" />
 
             <TextView
                 android:id="@+id/r_category_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Correct answers:"
                 android:layout_marginTop="@dimen/margin_result_card_view_left_right"
+                android:text="Correct answers:"
+                app:layout_constraintHorizontal_bias="0.558"
                 app:layout_constraintLeft_toRightOf="@+id/r_difTextview"
-                app:layout_constraintRight_toRightOf="@id/r_catTexView"
-                app:layout_constraintTop_toBottomOf="@+id/r_catTexView"/>
+                app:layout_constraintRight_toLeftOf="@+id/r_result"
+                app:layout_constraintTop_toBottomOf="@+id/r_catTexView" />
 
             <TextView
                 android:id="@+id/r_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="8/10"
-                android:textStyle="bold"
                 android:textColor="@color/black"
-                app:layout_constraintTop_toBottomOf="@+id/r_category_textView"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="@id/r_category_textView"
                 app:layout_constraintRight_toRightOf="@id/r_category_textView"
-                app:layout_constraintLeft_toLeftOf="@id/r_category_textView"/>
+                app:layout_constraintTop_toBottomOf="@+id/r_category_textView" />
 
             <TextView
                 android:id="@+id/r_result"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="40dp"
                 android:text="Result"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/r_category_textView"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/r_catTexView"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/r_result_percent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="80%"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/black"
+                app:layout_constraintRight_toRightOf="@+id/r_result"
+                app:layout_constraintLeft_toLeftOf="@+id/r_result"
+                app:layout_constraintTop_toBottomOf="@+id/r_result"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/quiz_result_finish"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rCardView"
+        android:layout_margin="40dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:textColor="@color/white"
+        android:background="@drawable/bg_button_finish"
+        android:fontFamily="sans-serif"
+        android:textStyle="bold"
+        android:text="Finish"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
