--- a/app/src/main/res/layout/item_quiz.xml
+++ b/app/src/main/res/layout/item_quiz.xml
@@ -20,48 +20,95 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
-    <TextView
-        android:id="@+id/quiz_question_answer_1"
-        style="@style/QuizQuestionAnswers"
+    <LinearLayout
+        android:id="@+id/container_multiple"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/extra_big_margin_2"
-        android:background="@drawable/bg_answer_quiz"
-        android:text="Colombo"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/quiz_question_field"/>
-    <TextView
-        android:id="@+id/quiz_question_answer_2"
-        style="@style/QuizQuestionAnswers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/extra_small_margin_2"
-        android:background="@drawable/bg_answer_quiz_1"
-        android:text="Moratuwa"
-        android:textColor="@color/colorBlue"
-        app:layout_constraintTop_toBottomOf="@+id/quiz_question_answer_1" />
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/quiz_question_field">
 
-    <TextView
-        android:id="@+id/quiz_question_answer_3"
-        style="@style/QuizQuestionAnswers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/extra_small_margin_2"
-        android:background="@drawable/bg_answer_quiz_1"
-        android:text="Negombo"
-        android:textColor="@color/colorBlue"
-        app:layout_constraintTop_toBottomOf="@+id/quiz_question_answer_2" />
+        <TextView
+            android:id="@+id/quiz_question_answer_1_1"
+            style="@style/QuizQuestionAnswers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/extra_big_margin_2"
+            android:background="@drawable/bg_answer_quiz"
+            android:text="True"
+            android:textColor="@color/colorBlue"
+            app:layout_constraintTop_toBottomOf="@+id/quiz_question_field"/>
 
-    <TextView
-        android:id="@+id/quiz_question_answer_4"
-        style="@style/QuizQuestionAnswers"
+        <TextView
+            android:id="@+id/quiz_question_answer_2_2"
+            style="@style/QuizQuestionAnswers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/extra_small_margin_2"
+            android:background="@drawable/bg_answer_quiz_1"
+            android:text="Moratuwa"
+            android:textColor="@color/colorBlue"
+            app:layout_constraintTop_toBottomOf="@+id/quiz_question_answer_1" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/container_boolean"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/extra_small_margin_2"
-        android:background="@drawable/bg_answer_quiz_1"
-        android:text="Kandy"
-        android:textColor="@color/colorBlue"
-        app:layout_constraintTop_toBottomOf="@+id/quiz_question_answer_3" />
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/quiz_question_field">
+
+        <TextView
+            android:id="@+id/quiz_question_answer_1"
+            style="@style/QuizQuestionAnswers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/extra_big_margin_2"
+            android:background="@drawable/bg_answer_quiz"
+            android:text="Colombo"
+            android:textColor="@color/colorBlue"
+            app:layout_constraintTop_toBottomOf="@+id/quiz_question_field"/>
+
+        <TextView
+            android:id="@+id/quiz_question_answer_2"
+            style="@style/QuizQuestionAnswers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/extra_small_margin_2"
+            android:background="@drawable/bg_answer_quiz_1"
+            android:text="Moratuwa"
+            android:textColor="@color/colorBlue"
+            app:layout_constraintTop_toBottomOf="@+id/quiz_question_answer_1" />
+
+
+        <TextView
+            android:id="@+id/quiz_question_answer_3"
+            style="@style/QuizQuestionAnswers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/extra_small_margin_2"
+            android:background="@drawable/bg_answer_quiz_1"
+            android:text="Negombo"
+            android:textColor="@color/colorBlue"
+            app:layout_constraintTop_toBottomOf="@+id/quiz_question_answer_2" />
+
+        <TextView
+            android:id="@+id/quiz_question_answer_4"
+            style="@style/QuizQuestionAnswers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/extra_small_margin_2"
+            android:background="@drawable/bg_answer_quiz_1"
+            android:text="Kandy"
+            android:textColor="@color/colorBlue"
+            app:layout_constraintTop_toBottomOf="@+id/quiz_question_answer_3" />
+
+
+
+    </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
